time rows created

--- a/index.html
+++ b/index.html
@@ -21,10 +21,76 @@
     <p id="currentDay" class="lead"></p>
   </header>
   <div class="container">
-    <!-- Timeblocks go here -->
+    <!-- row 1 -->
+    <div class="row">
+      <div class="col-2">
+        8:00 am
+      </div>
+    </div>
+    <!-- row 2 -->
+    <div class="row">
+      <div class="col-2">
+        9:00 am
+      </div>
+    </div>
+    <!-- row 3 -->
+    <div class="row">
+      <div class="col-2">
+        10:00 am
+      </div>
+    </div>
+    <!-- row 4 -->
+    <div class="row">
+      <div class="col-2">
+        11:00 am
+      </div>
+    </div>
+    <!-- row 5 -->
+    <div class="row">
+      <div class="col-2">
+        12:00 pm
+      </div>
+    </div>
+    <!-- row 6 -->
+    <div class="row">
+      <div class="col-2">
+        1:00 pm
+      </div>
+    </div>
+    <!-- row 7 -->
+    <div class="row">
+      <div class="col-2">
+        1:00 pm
+      </div>
+    </div>
+    <!-- row 8 -->
+    <div class="row">
+      <div class="col-2">
+        2:00 pm
+      </div>
+    </div>
+    <!-- row 9 -->
+    <div class="row">
+      <div class="col-2">
+        3:00 pm
+      </div>
+    </div>
+    <!-- row 10 -->
+    <div class="row">
+      <div class="col-2">
+        4:00 pm
+      </div>
+    </div>
+    <!-- row 11 -->
+    <div class="row">
+      <div class="col-2">
+        5:00 pm
+      </div>
+    </div>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <script src="Assets/CSS/script.js"></script>
 </body>
 
