--- a/index.html
+++ b/index.html
@@ -26,11 +26,17 @@
       <div class="col-2">
         8:00 am
       </div>
+      <div class="col-8">
+        tbd
+      </div>
     </div>
     <!-- row 2 -->
     <div class="row">
       <div class="col-2">
         9:00 am
+      </div>
+      <div class="col-8">
+        tbd
       </div>
     </div>
     <!-- row 3 -->
@@ -38,11 +44,17 @@
       <div class="col-2">
         10:00 am
       </div>
+      <div class="col-8">
+        tbd
+      </div>
     </div>
     <!-- row 4 -->
     <div class="row">
       <div class="col-2">
         11:00 am
+      </div>
+      <div class="col-8">
+        tbd
       </div>
     </div>
     <!-- row 5 -->
@@ -50,11 +62,17 @@
       <div class="col-2">
         12:00 pm
       </div>
+      <div class="col-8">
+        tbd
+      </div>
     </div>
     <!-- row 6 -->
     <div class="row">
       <div class="col-2">
         1:00 pm
+      </div>
+      <div class="col-8">
+        tbd
       </div>
     </div>
     <!-- row 7 -->
@@ -62,11 +80,17 @@
       <div class="col-2">
         1:00 pm
       </div>
+      <div class="col-8">
+        tbd
+      </div>
     </div>
     <!-- row 8 -->
     <div class="row">
       <div class="col-2">
         2:00 pm
+      </div>
+      <div class="col-8">
+        tbd
       </div>
     </div>
     <!-- row 9 -->
@@ -74,17 +98,26 @@
       <div class="col-2">
         3:00 pm
       </div>
+      <div class="col-8">
+        tbd
+      </div>
     </div>
     <!-- row 10 -->
     <div class="row">
       <div class="col-2">
         4:00 pm
       </div>
+      <div class="col-8">
+        tbd
+      </div>
     </div>
     <!-- row 11 -->
     <div class="row">
       <div class="col-2">
         5:00 pm
+      </div>
+      <div class="col-8">
+        tbd
       </div>
     </div>
   </div>
