--- a/index.html
+++ b/index.html
@@ -23,205 +23,128 @@
   <div class="container">
     <!-- row 1 -->
     <div class="row">
-      <div class="col-2 hour">
+      <div class="col-2 hour" id="time">
         8:00 am
       </div>
-      <div class="col-9 past">
-        tbd
+      <div class="col-9 meeting-event">
+        <p>Click here to add meeting</p>
       </div>
-      <div class="col-1 saveBtn">
-        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-calendar-check iconCenter" fill="currentColor"
-          xmlns="http://www.w3.org/2000/svg">
-          <path fill-rule="evenodd"
-            d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z" />
-          <path fill-rule="evenodd"
-            d="M10.854 7.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7.5 9.793l2.646-2.647a.5.5 0 0 1 .708 0z" />
-        </svg>
+      <div class="col-1">
+        <button class="saveBtn i:hover" id="saveBtn">Save</button>
       </div>
     </div>
     <!-- row 2 -->
     <div class="row">
-      <div class="col-2 hour">
+      <div class="col-2 hour" id="time">
         9:00 am
       </div>
-      <div class="col-9 past">
-        tbd
+      <div class="col-9 meeting-event">
+        <p>Click here to add meeting</p>
       </div>
-      <div class="col-1 saveBtn">
-        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-calendar-check iconCenter" fill="currentColor"
-          xmlns="http://www.w3.org/2000/svg">
-          <path fill-rule="evenodd"
-            d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z" />
-          <path fill-rule="evenodd"
-            d="M10.854 7.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7.5 9.793l2.646-2.647a.5.5 0 0 1 .708 0z" />
-        </svg>
+      <div class="col-1">
+        <button class="saveBtn saveBtn i:hover">Save</button>
       </div>
     </div>
     <!-- row 3 -->
     <div class="row">
-      <div class="col-2 hour">
+      <div class="col-2 hour" id="time">
         10:00 am
       </div>
-      <div class="col-9 past">
-        tbd
+      <div class="col-9 meeting-event">
+        <p>Click here to add meeting</p>
       </div>
-      <div class="col-1 saveBtn">
-        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-calendar-check iconCenter" fill="currentColor"
-          xmlns="http://www.w3.org/2000/svg">
-          <path fill-rule="evenodd"
-            d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z" />
-          <path fill-rule="evenodd"
-            d="M10.854 7.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7.5 9.793l2.646-2.647a.5.5 0 0 1 .708 0z" />
-        </svg>
+      <div class="col-1">
+        <button class="saveBtn saveBtn i:hover">Save</button>
       </div>
     </div>
     <!-- row 4 -->
     <div class="row">
-      <div class="col-2 hour">
+      <div class="col-2 hour" id="time">
         11:00 am
       </div>
-      <div class="col-9 past">
-        tbd
+      <div class="col-9 meeting-event">
+        <p>Click here to add meeting</p>
       </div>
-      <div class="col-1 saveBtn">
-        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-calendar-check iconCenter" fill="currentColor"
-          xmlns="http://www.w3.org/2000/svg">
-          <path fill-rule="evenodd"
-            d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z" />
-          <path fill-rule="evenodd"
-            d="M10.854 7.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7.5 9.793l2.646-2.647a.5.5 0 0 1 .708 0z" />
-        </svg>
+      <div class="col-1">
+        <button class="saveBtn saveBtn i:hover">Save</button>
       </div>
     </div>
     <!-- row 5 -->
     <div class="row">
-      <div class="col-2 hour">
+      <div class="col-2 hour" id="time">
         12:00 pm
       </div>
-      <div class="col-9 past">
-        tbd
+      <div class="col-9 meeting-event">
+        <p>Click here to add meeting</p>
       </div>
-      <div class="col-1 saveBtn">
-        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-calendar-check iconCenter" fill="currentColor"
-          xmlns="http://www.w3.org/2000/svg">
-          <path fill-rule="evenodd"
-            d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z" />
-          <path fill-rule="evenodd"
-            d="M10.854 7.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7.5 9.793l2.646-2.647a.5.5 0 0 1 .708 0z" />
-        </svg>
+      <div class="col-1">
+        <button class="saveBtn saveBtn i:hover">Save</button>
       </div>
     </div>
     <!-- row 6 -->
     <div class="row">
-      <div class="col-2 hour">
+      <div class="col-2 hour" id="time">
         1:00 pm
       </div>
-      <div class="col-9 past">
-        tbd
+      <div class="col-9 meeting-event">
+        <p>Click here to add meeting</p>
       </div>
-      <div class="col-1 saveBtn">
-        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-calendar-check iconCenter" fill="currentColor"
-          xmlns="http://www.w3.org/2000/svg">
-          <path fill-rule="evenodd"
-            d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z" />
-          <path fill-rule="evenodd"
-            d="M10.854 7.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7.5 9.793l2.646-2.647a.5.5 0 0 1 .708 0z" />
-        </svg>
+      <div class="col-1">
+        <button class="saveBtn saveBtn i:hover">Save</button>
       </div>
     </div>
     <!-- row 7 -->
-    <div class="row">
-      <div class="col-2 hour">
-        1:00 pm
-      </div>
-      <div class="col-9 past">
-        tbd
-      </div>
-      <div class="col-1 saveBtn">
-        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-calendar-check iconCenter" fill="currentColor"
-          xmlns="http://www.w3.org/2000/svg">
-          <path fill-rule="evenodd"
-            d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z" />
-          <path fill-rule="evenodd"
-            d="M10.854 7.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7.5 9.793l2.646-2.647a.5.5 0 0 1 .708 0z" />
-        </svg>
-      </div>
-    </div>
     <!-- row 8 -->
     <div class="row">
-      <div class="col-2 hour">
+      <div class="col-2 hour" id="time">
         2:00 pm
       </div>
-      <div class="col-9 past">
-        tbd
+      <div class="col-9 meeting-event">
+        <p>Click here to add meeting</p>
       </div>
-      <div class="col-1 saveBtn">
-        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-calendar-check iconCenter" fill="currentColor"
-          xmlns="http://www.w3.org/2000/svg">
-          <path fill-rule="evenodd"
-            d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z" />
-          <path fill-rule="evenodd"
-            d="M10.854 7.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7.5 9.793l2.646-2.647a.5.5 0 0 1 .708 0z" />
-        </svg>
+      <div class="col-1">
+        <button class="saveBtn saveBtn i:hover">Save</button>
       </div>
     </div>
     <!-- row 9 -->
     <div class="row">
-      <div class="col-2 hour">
+      <div class="col-2 hour" id="time">
         3:00 pm
       </div>
-      <div class="col-9 past">
-        tbd
+      <div class="col-9 meeting-event">
+        <p>Click here to add meeting</p>
       </div>
-      <div class="col-1 saveBtn">
-        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-calendar-check iconCenter" fill="currentColor"
-          xmlns="http://www.w3.org/2000/svg">
-          <path fill-rule="evenodd"
-            d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z" />
-          <path fill-rule="evenodd"
-            d="M10.854 7.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7.5 9.793l2.646-2.647a.5.5 0 0 1 .708 0z" />
-        </svg>
+      <div class="col-1">
+        <button class="saveBtn saveBtn i:hover">Save</button>
       </div>
     </div>
     <!-- row 10 -->
     <div class="row">
-      <div class="col-2 hour">
+      <div class="col-2 hour" id="time">
         4:00 pm
       </div>
-      <div class="col-9 past">
-        tbd
+      <div class="col-9 meeting-event">
+        <p>Click here to add meeting</p>
       </div>
-      <div class="col-1 saveBtn">
-        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-calendar-check iconCenter" fill="currentColor"
-          xmlns="http://www.w3.org/2000/svg">
-          <path fill-rule="evenodd"
-            d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z" />
-          <path fill-rule="evenodd"
-            d="M10.854 7.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7.5 9.793l2.646-2.647a.5.5 0 0 1 .708 0z" />
-        </svg>
+      <div class="col-1">
+        <button class="saveBtn saveBtn i:hover">Save</button>
       </div>
     </div>
     <!-- row 11 -->
     <div class="row">
-      <div class="col-2 hour">
+      <div class="col-2 hour" id="time">
         5:00 pm
       </div>
-      <div class="col-9 past">
-        tbd
+      <div class="col-9 meeting-event">
+        <p>Click here to add meeting</p>
       </div>
-      <div class="col-1 saveBtn">
-        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-calendar-check iconCenter" fill="currentColor"
-          xmlns="http://www.w3.org/2000/svg">
-          <path fill-rule="evenodd"
-            d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z" />
-          <path fill-rule="evenodd"
-            d="M10.854 7.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7.5 9.793l2.646-2.647a.5.5 0 0 1 .708 0z" />
-        </svg>
+      <div class="col-1">
+        <button class="saveBtn saveBtn i:hover">Save</button>
       </div>
     </div>
   </div>
 
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <script src="Assets/Java/script.js"></script>
 </body>
